@startuml Interaction Class Structure

title Interaction Class Structure

class InteractionDirector <<Node3D>>{
    == Data ==
    .. Public ..
    + string interactionDataPath
    .. Protected ..
    # ObjectPickupDirector itemPickupDir
	# InventoryDirector inventoryDir
	# PackedScene damageLabel
	# float currentHealth
    .. Private ..
    - InteractionData interactionData
    - Node mainRoot

    == Methods ==
    .. Public ..
    + GetInteractionData() : InteractionData
    + TickHealth() : void
    .. Protected ..
    # DisplayDamageValue() : void
    # LoadInteractionData() : void
    # InitHealthData() : void
    # PickupFirstFreeAttack() : void
    # CheckIfDead() : void
    # DeathSequence() : void
    .. Private ..
}

class PlayerInteractionDirector {
    == Data ==
    .. Public ..
    .. Protected ..
    .. Private ..
    - PlayerInteractionData interactionData

    == Methods ==
    .. Public ..
    + GetInteractionData() : PlayerInteractionData
    .. Protected ..
    # LoadInteractionData() : void
    # PickupFirstFreeAttack() : void
    .. Private ..
}

class NPCInteractionDirector {
    == Data ==
    .. Public ..
    .. Protected ..
    .. Private ..
    - NPCInteractionData interactionData

    == Methods ==
    .. Public ..
    + GetInteractionData() : NPCInteractionData
    .. Protected ..
    # LoadInteractionData() : void
    .. Private ..
}

class EnemeyInteractionDirector {
    == Data ==
    .. Public ..
    .. Protected ..
    # Node parentNode
    .. Private ..
    - EnemyInteractionData interactionData

    == Methods ==
    .. Public ..
    + GetInteractionData() : EnemyInteractionData
    .. Protected ..
    # LoadInteractionData() : void
    # DeathSequence() : void
    .. Private ..
    - GetParentNode() : void
}

class InventoryDirector <<Node3D>> {
    == Data ==
    .. Public ..
    .. Protected ..
    # List attackInventory
    .. Private ..
    - int maxAttackCount

    == Methods ==
    .. Public ..
    + GetAttackIndex() : int
    + IsPlayerMaxedOutOnAttacks() : bool
    + EquipNewAttack() : void
    + LevelUpEquippedAction() : bool
    .. Protected ..
    .. Private ..
    - IsActionSlotMaxLevel() : bool
}

class ObjectPickupDirector <<Area3D>> {
    == Data ==
    .. Public ..
    + List nearbyFreeActionNodes
    .. Protected ..
    .. Private ..
    - bool debug

    == Methods ==
    .. Public ..
    .. Protected ..
    .. Private ..
    - AddFreeActionToNearbyList() : void
    - RemoveFreeActionFromNearbyList() : void
}

InteractionDirector <|-- PlayerInteractionDirector
InteractionDirector <|-- NPCInteractionDirector
NPCInteractionDirector <|-- EnemeyInteractionDirector

@enduml